# personal-marketplace

./: .gitignore  CLAUDE.md  README.md  index.js  package.json  promptfoo.yaml  pyproject.toml
.claude-plugin/: marketplace.json
agents/agentic-test-creator/: AGENT.md
claude_skills/: __init__.py
skills/branch/: tests.md
skills/commit/: tests.md
skills/summarize-diff/: tests.md
test-apps/portside-demo/: app.py
test-apps/portside-demo/templates/: base.html  contact.html  index.html  services.html  success.html
tests/: conftest.py  test_portside.py
tests/pages/: base_page.py  contact_page.py  home_page.py  services_page.py  success_page.py
