[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-skills"
version = "1.0.0"
description = "Reusable Claude Code skills for common development workflows"
readme = "README.md"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "skills", "ai"]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/alex-gagnon/claude-skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_skills*"]

[tool.setuptools.package-data]
claude_skills = ["skills/**"]
